Cluster table approach MODSI-33 MODSU-28 (#17)
This introduces cluster_records and cluster_values tables.

The match_key_value is still there and still used for
/shared-index/records?matchkeyid= .. fetches.

The /shared-index/clusters returns clusters and the records in each.

All cases of updates should be handled including a record that moves from one cluster
to another and general record deletion.

8 mio records where ingested in approx 6 hours with Postgresql process having a
load of 30% - 40% and a similar load for the server process.. Highest load for the
client which does XSLT etc..

Environment MATCHKEY controls what to update on ingest/initialize: original : match_key_valule,
cluster: cluster tables, undefined: both.
