# server/src/main/resources/openapi/shared-index-1.0.yaml
@@ -389,6 +389,29 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  /shared-index/clusters:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/limit.yaml
+      - $ref: parameters/matchkeyid.yaml
+      - $ref: parameters/query.yaml
+      - $ref: parameters/offset.yaml
+    get:
+      description: Get clusters with matchkeyid
+      operationId: getClusters
+      responses:
+        "200":
+          description: cluster record(s) found
+          content:
+            application/json:
+              schema:
+                $ref: schemas/clusters.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "500":
+          $ref: "#/components/responses/trait_500"
 # Shared error responses
 components:
   responses:
